syntax = "proto3";

option csharp_namespace = "gRPCIntercommunicationService.Protos";


service Vault{ 

}

message CreateVaultRequest{ 

}

message CreateVaultResponse
{ 

}
